--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -10,7 +10,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: 📥 Cloner le dépôt
         uses: actions/checkout@v3
@@ -22,10 +21,6 @@ jobs:
           curl -sS https://getcomposer.org/installer | php
           sudo mv composer.phar /usr/local/bin/composer
           composer install
-
-      - name: 🔍 Exécuter PHPStan (Static Code Analysis)
-        run: |
-          vendor/bin/phpstan analyse --level=max src/ --no-progress --error-format=table --memory-limit=2G || true
 
       - name: 🌐 Installer Google Chrome et ChromeDriver
         run: |
@@ -46,37 +41,10 @@ jobs:
           source venv/bin/activate
           pip install selenium webdriver-manager
 
-      - name: 🖥 Lancer le test Selenium - Test 1
+      - name: 🖥 Lancer le test Selenium
         run: |
           source venv/bin/activate
-          python3 tests/selenium_tests.py
-
-      - name: 🖥 Lancer le test Selenium - Test 2
-        run: |
-          source venv/bin/activate
-          python3 tests/selenium_test_pack_or.py
-
-      - name: 🛡️ Test d'injection SQL avec SQLMap
-        run: |
-          source venv/bin/activate
-          wget https://github.com/sqlmapproject/sqlmap/archive/refs/heads/master.zip
-          unzip master.zip
-          python3 sqlmap-master/sqlmap.py -u "https://regisono.com/login.php?id=1" --batch --dbs --random-agent --tamper=space2comment || true
-
-      # - name: 🕷️ Exécuter le scan Spider avec ZAP
-      #   run: |
-      #     source venv/bin/activate
-      #     python3 tests/spider.py
-
-      # - name: 🔍 Exécuter le scan actif avec ZAP
-      #   run: |
-      #     source venv/bin/activate
-      #     python3 tests/active_scan.py
-
-      # - name: 🔑 Exécuter le test d'authentification avec ZAP
-      #   run: |
-      #     source venv/bin/activate
-      #     python3 tests/form_autentification.py
+          python3 tests/selenium_test_pack_or4.py
 
       - name: 📅 Définir la date d'exécution
         run: echo "DATE_EXECUTION=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
@@ -88,13 +56,13 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USER }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "[GitHub Actions] Test d'acceptation terminé : Gestion_Note"
+          subject: "[GitHub Actions] Test securité terminé : Gestion_Note"
           to: "aboulayesamb@gmail.com"
           from: "GitHub Actions"
           body: |
             Bonjour,
 
-            L'exécution du pipeline est terminée.
+            L'exécution du test d'acceptation Selenium est terminée.
 
             - ✅ Résultat : ${{ job.status }}
             - 📅 Date : ${{ env.DATE_EXECUTION }}
