--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -22,6 +22,10 @@ jobs:
           sudo mv composer.phar /usr/local/bin/composer
           composer install
 
+      - name: 🔍 Exécuter PHPStan (Static Code Analysis)
+        run: |
+          vendor/bin/phpstan analyse --level=max src/ --no-progress --error-format=table --memory-limit=2G || true
+
       - name: 🌐 Installer Google Chrome et ChromeDriver
         run: |
           sudo apt update
@@ -41,10 +45,27 @@ jobs:
           source venv/bin/activate
           pip install selenium webdriver-manager
 
-      - name: 🖥 Lancer le test Selenium
+      - name: 🖥 Lancer le test Selenium - Test 1
         run: |
           source venv/bin/activate
-          python3 tests/selenium_test_pack_or4.py
+          python3 tests/selenium_tests.py
+
+      - name: 🖥 Lancer le test Selenium - Test 2
+        run: |
+          source venv/bin/activate
+          python3 tests/selenium_test_pack_or.py
+
+      - name: 🛡️ SQL Injection Test 1 (Direct)
+        run: |
+          source venv/bin/activate
+          wget https://github.com/sqlmapproject/sqlmap/archive/refs/heads/master.zip
+          unzip master.zip
+          python3 sqlmap-master/sqlmap.py -u "https://regisono.com/login.php?id=1" --batch --dbs --random-agent --tamper=space2comment || true
+
+      - name: 🛡️ SQL Injection Test 2 (Automatisation)
+        run: |
+          source venv/bin/activate
+          python3 automatisation_sqlmap.py
 
       - name: 📅 Définir la date d'exécution
         run: echo "DATE_EXECUTION=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
@@ -56,13 +77,13 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USER }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "[GitHub Actions] Test securité terminé : Gestion_Note"
+          subject: "[GitHub Actions] Tests de sécurité terminés : Gestion_Note"
           to: "aboulayesamb@gmail.com"
           from: "GitHub Actions"
           body: |
             Bonjour,
 
-            L'exécution du test d'acceptation Selenium est terminée.
+            L'exécution du pipeline de sécurité est terminée.
 
             - ✅ Résultat : ${{ job.status }}
             - 📅 Date : ${{ env.DATE_EXECUTION }}
