--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -65,7 +65,7 @@ jobs:
       - name: 🛡️ SQL Injection Test 2 (Automatisation)
         run: |
           source venv/bin/activate
-          python3 automatisation_sqlmap.py
+          python3 tests/automatisation_sqlmap.py
 
       - name: 📅 Définir la date d'exécution
         run: echo "DATE_EXECUTION=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
