--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -28,44 +28,35 @@ jobs:
 
       - name: 🌐 Installer Google Chrome et ChromeDriver
         run: |
-            sudo apt update
-            sudo apt install -y wget unzip
-            wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-            sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -fy install
-            google-chrome --version
-            CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
-            wget -q "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
-            unzip chromedriver_linux64.zip
-            sudo mv chromedriver /usr/local/bin/
-            chromedriver --version
+          sudo apt update
+          sudo apt install -y wget unzip
+          wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -fy install
+          google-chrome --version
+          
+          # Utilisation de webdriver-manager pour gérer ChromeDriver
+          pip3 install webdriver-manager
+          
+          # Ajouter ChromeDriver au PATH
+          echo 'export PATH=$PATH:/usr/local/bin' >> ~/.bashrc
+          source ~/.bashrc
 
       - name: 🛠 Installer les dépendances Python et Selenium
         run: |
           python3 -m venv venv
-          source venv/bin/activate
-          pip install selenium webdriver-manager
+          venv/bin/activate && pip install selenium webdriver-manager
 
       - name: 🖥 Lancer le test Selenium - Test 1
         run: |
-          source venv/bin/activate
-          python3 tests/selenium_tests.py
+          venv/bin/activate && python3 tests/selenium_tests.py
 
       - name: 🖥 Lancer le test Selenium - Test 2
         run: |
-          source venv/bin/activate
-          python3 tests/selenium_test_pack_or.py
+          venv/bin/activate && python3 tests/selenium_test_pack_or.py
 
-      - name: 🛡️ SQL Injection Test 1 (Direct)
+      - name: 🛡️ SQL Injection Test (Automatisation)
         run: |
-          source venv/bin/activate
-          wget https://github.com/sqlmapproject/sqlmap/archive/refs/heads/master.zip
-          unzip master.zip
-          python3 sqlmap-master/sqlmap.py -u "https://regisono.com/login.php?id=1" --batch --dbs --random-agent --tamper=space2comment || true
-
-      - name: 🛡️ SQL Injection Test 2 (Automatisation)
-        run: |
-          source venv/bin/activate
-          python3 tests/automatisation_sqlmap.py
+          venv/bin/activate && python3 tests/automatisation_sqlmap.py
 
       - name: 📅 Définir la date d'exécution
         run: echo "DATE_EXECUTION=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
