--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1,8 +1,8 @@
 name: CI/CD regisono
 
 on:
-  schedule:
-    - cron: '0 */6 * * *' # Exécution toutes les 6 heures
+  # schedule:
+  #   - cron: '0 */6 * * *' # Exécution toutes les 6 heures
   push:
     branches:
       - main
